makers-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: makers-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: makerservice
  template:
    metadata:
      labels:
        app: makerservice
    spec:
      containers:
        - name: makerservice
          image: nathanouriach/makerservice:latest
