profiles-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: profileservice
  template:
    metadata:
      labels:
        app: profileservice
    spec:
      containers:
        - name: profileservice
          image: nathanouriach/profileservice:latest
