makers-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: makers-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: makerservice
  ports:
    - name: makerservice
      protocol: TCP
      port: 80
      targetPort: 80
