profiles-nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: profile-nodeport-service-srv
spec:
  type: NodePort
  selector:
    app: profileservice
  ports:
    - name: profileservice
      protocol: TCP
      port: 80
      targetPort: 80
